src/snapshots/rust_norg__tests__modifiers.snap
---
source: src/lib.rs
expression: examples
---
- - Paragraph:
      - Token:
          Text: this
      - Token: Whitespace
      - AttachedModifier:
          modifier_type: "*"
          content:
            - Token:
                Text: is
      - Token: Whitespace
      - Token:
          Text: a
      - Token: Whitespace
      - Token:
          Text: test
- - Paragraph:
      - Token:
          Text: hello
      - Token:
          Special: ","
      - Token: Whitespace
      - AttachedModifier:
          modifier_type: "*"
          content:
            - Token:
                Text: world
      - Token:
          Special: "!"
- - Paragraph:
      - AttachedModifier:
          modifier_type: "*"
          content:
            - Token:
                Text: hello
            - Token:
                Special: ","
            - Token: Whitespace
            - Token:
                Text: world
            - Token:
                Special: "!"
- - Paragraph:
      - AttachedModifier:
          modifier_type: "*"
          content:
            - Token:
                Text: hello
      - Token:
          Special: ","
      - Token: Whitespace
      - Token:
          Text: world
      - Token:
          Special: "!"
- - Paragraph:
      - AttachedModifier:
          modifier_type: "*"
          content:
            - AttachedModifier:
                modifier_type: /
                content:
                  - Token:
                      Text: hello
      - Token:
          Special: ","
      - Token: Whitespace
      - Token:
          Text: world
      - Token:
          Special: "!"
- - Paragraph:
      - AttachedModifier:
          modifier_type: "*"
          content:
            - Token:
                Text: hi
            - Token:
                Special: "!"
      - Token: Whitespace
      - Token:
          Text: how
      - Token: Whitespace
      - Token:
          Text: are
      - Token: Whitespace
      - Token:
          Text: you?
