src/snapshots/rust_norg__tests__ordered_lists.snap
---
source: src/main.rs
expression: examples
---
- - NestableDetachedModifier:
      modifier_type: OrderedList
      level: 1
      extensions: []
      content:
        Paragraph:
          - Text: Test
          - Whitespace
          - Text: list
- - NestableDetachedModifier:
      modifier_type: OrderedList
      level: 4
      extensions: []
      content:
        Paragraph:
          - Text: Test
          - Whitespace
          - Text: list
- - NestableDetachedModifier:
      modifier_type: OrderedList
      level: 1
      extensions: []
      content:
        Paragraph:
          - Text: Test
          - Whitespace
          - Text: list
  - NestableDetachedModifier:
      modifier_type: OrderedList
      level: 1
      extensions: []
      content:
        Paragraph:
          - Text: Test
          - Whitespace
          - Text: list
  - NestableDetachedModifier:
      modifier_type: OrderedList
      level: 2
      extensions: []
      content:
        Paragraph:
          - Text: Test
          - Whitespace
          - Text: list
  - NestableDetachedModifier:
      modifier_type: OrderedList
      level: 2
      extensions: []
      content:
        Paragraph:
          - Text: Test
          - Whitespace
          - Text: list
  - NestableDetachedModifier:
      modifier_type: OrderedList
      level: 1
      extensions: []
      content:
        Paragraph:
          - Text: Test
          - Whitespace
          - Text: list
  - NestableDetachedModifier:
      modifier_type: OrderedList
      level: 3
      extensions: []
      content:
        Paragraph:
          - Text: Test
          - Whitespace
          - Text: list
- - Paragraph:
      - Special: "~"
      - Special: "~"
      - Special: "~"
      - Text: not
      - Whitespace
      - Text: list
- - Paragraph:
      - Special: "~"
      - Special: "~"
      - Special: ">"
      - Whitespace
      - Text: not
      - Whitespace
      - Text: a
      - Whitespace
      - Text: list
