src/snapshots/rust_norg__tests__paragraphs.snap
---
source: src/lib.rs
expression: examples
---
- - Paragraph:
      - Token:
          Text: hello
      - Token:
          Special: ","
      - Token: Whitespace
      - Token:
          Text: world
      - Token:
          Special: "!"
- - Paragraph:
      - AttachedModifier:
          modifier_type: "*"
          content:
            - Token:
                Text: hello
            - Token:
                Special: ","
            - Token: Whitespace
            - Token:
                Text: world
            - Token:
                Special: "!"
- - Paragraph:
      - AttachedModifier:
          modifier_type: "*"
          content:
            - Token:
                Text: hello
            - Token:
                Special: ","
            - Token: Whitespace
            - Token:
                Text: world
            - Token:
                Special: "!"
- - Paragraph:
      - Token:
          Text: two
  - Paragraph:
      - Token:
          Text: paragraphs
- - Paragraph:
      - Token:
          Text: paragraph
      - Token: Whitespace
      - Token:
          Text: here
  - Paragraph:
      - Token:
          Text: another
      - Token: Whitespace
      - Token:
          Text: paragraph
      - Token: Whitespace
      - Token:
          Text: here
      - Token:
          Special: "."
