src/snapshots/rust_norg__tests__ranged_tags.snap
---
source: src/lib.rs
expression: examples
---
- - RangedTag:
      name:
        - example
      parameters: []
      content:
        - Paragraph:
            - Token:
                Text: Hello
            - Token: Whitespace
            - Token:
                Text: world
            - Token:
                Special: "!"
- - RangedTag:
      name:
        - example
        - some-text
        - here
      parameters:
        - "one\\ parameter"
        - second-parameter
      content:
        - CarryoverTag:
            tag_type: Macro
            name:
              - carryover
            parameters: []
            next_object:
              Paragraph:
                - Token:
                    Text: text
                - Token: Whitespace
                - Token:
                    Text: within
- - RangedTag:
      name:
        - some-complex_tag_
      parameters:
        - first-parameter
        - "#&*(&$!)"
        - third-parameter
      content:
        - Paragraph:
            - Token:
                Text: this
            - Token: Whitespace
            - Token:
                Text: is
            - Token: Whitespace
            - Token:
                Text: some
            - Token: Whitespace
            - Token:
                Text: text
            - Token: Whitespace
            - Token:
                Text: within
- - RangedTag:
      name:
        - example
      parameters: []
      content:
        - Heading:
            level: 1
            title:
              - Token:
                  Text: Hello
              - Token: Whitespace
              - Token:
                  Text: world
              - Token:
                  Special: "!"
            extensions: []
- - RangedTag:
      name:
        - example
      parameters: []
      content:
        - RangedTag:
            name:
              - example
            parameters: []
            content:
              - Heading:
                  level: 1
                  title:
                    - Token:
                        Text: Hello
                    - Token: Whitespace
                    - Token:
                        Text: world
                    - Token:
                        Special: "!"
                  extensions: []
- - RangedTag:
      name:
        - example
      parameters: []
      content:
        - Paragraph:
            - Token:
                Text: Hello
            - Token: Whitespace
            - Token:
                Text: world
            - Token:
                Special: "!"
- - RangedTag:
      name:
        - example
        - some-text
        - here
      parameters:
        - "one\\ parameter"
        - second-parameter
      content:
        - CarryoverTag:
            tag_type: Macro
            name:
              - carryover
            parameters: []
            next_object:
              Paragraph:
                - Token:
                    Text: text
                - Token: Whitespace
                - Token:
                    Text: within
- - RangedTag:
      name:
        - some-complex_tag_
      parameters:
        - first-parameter
        - "#&*(&$!)"
        - third-parameter
      content:
        - Paragraph:
            - Token:
                Text: this
            - Token: Whitespace
            - Token:
                Text: is
            - Token: Whitespace
            - Token:
                Text: some
            - Token: Whitespace
            - Token:
                Text: text
            - Token: Whitespace
            - Token:
                Text: within
- - RangedTag:
      name:
        - example
      parameters: []
      content:
        - Heading:
            level: 1
            title:
              - Token:
                  Text: Hello
              - Token: Whitespace
              - Token:
                  Text: world
              - Token:
                  Special: "!"
            extensions: []
- - RangedTag:
      name:
        - example
      parameters: []
      content:
        - RangedTag:
            name:
              - example
            parameters: []
            content:
              - Heading:
                  level: 1
                  title:
                    - Token:
                        Text: Hello
                    - Token: Whitespace
                    - Token:
                        Text: world
                    - Token:
                        Special: "!"
                  extensions: []
