src/snapshots/rust_norg__tests__ranged_verbatim_tags.snap
---
source: src/lib.rs
expression: examples
---
- - VerbatimRangedTag:
      name:
        - code
      parameters: []
      content: "print(\"Hello world!\")\n"
- - VerbatimRangedTag:
      name:
        - code
        - some-text
        - here
      parameters:
        - "lua\\ language second-parameter  print(\"Hello world!\")  "
      content: ""
- - VerbatimRangedTag:
      name:
        - some-complex_tag_
      parameters:
        - "first-parameter #&*(&$!) third-parameter  function hello()  print(\"Hello World\")  end  hello()  "
      content: ""
