src/snapshots/rust_norg__tests__tables.snap
---
source: src/main.rs
expression: examples
---
- - RangeableDetachedModifier:
      modifier_type: Table
      title:
        - Text: A1
      extensions: []
      content:
        - Paragraph:
            - Text: Cell
            - Whitespace
            - Text: content
- - RangeableDetachedModifier:
      modifier_type: Table
      title:
        - Text: A1
      extensions: []
      content:
        - Paragraph:
            - Text: Long
            - Whitespace
            - Text: cell
            - Whitespace
            - Text: content
            - Special: "."
